--- a/dashboard.html
+++ b/dashboard.html
@@ -112,60 +112,76 @@
     });
   }
 
-  // Partidos disponibles
-  async function loadPartidosDisponibles() {
-    const { data: reservas } = await supabase
-      .from("reservas")
-      .select("id, fecha, hora_inicio, hora_fin, cupo_actual, cupo_max, usuario_id, canchas(nombre)");
+ async function loadPartidosDisponibles() {
+  const { data: reservas, error } = await supabase
+    .from("reservas")
+    .select("id, fecha, hora_inicio, hora_fin, cupo_actual, cupo_max, usuario_id, canchas(nombre)");
 
-    const { data: misPartidos } = await supabase
-      .from("reservas_usuarios")
-      .select("reserva_id")
-      .eq("usuario_id", currentUser.id);
-
-    const idsOcupados = misPartidos.map(r => r.reserva_id);
-
-    const disponibles = reservas.filter(r =>
-      !idsOcupados.includes(r.id) &&
-      r.cupo_actual < r.cupo_max
-    );
-
-    const lista = document.getElementById("partidos-disponibles");
-    lista.innerHTML = "";
-
-    if (disponibles.length === 0) {
-      lista.innerHTML = `<li class="list-group-item">No hay partidos disponibles</li>`;
-      return;
-    }
-
-    disponibles.forEach(r => {
-      const item = document.createElement("li");
-      item.className = "list-group-item d-flex justify-content-between align-items-center";
-      item.innerHTML = `
-        <span>${r.canchas.nombre} - ${r.fecha} ${r.hora_inicio}-${r.hora_fin} | Cupo: ${r.cupo_actual}/${r.cupo_max}</span>
-        <button class="btn btn-sm btn-primary">Unirme</button>
-      `;
-
-      item.querySelector("button").addEventListener("click", async () => {
-        const { error } = await supabase
-          .from("reservas_usuarios")
-          .insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
-
-        if (error) {
-          alert("❌ Error al unirse: " + error.message);
-        } else {
-          await supabase
-            .from("reservas")
-            .update({ cupo_actual: r.cupo_actual + 1 })
-            .eq("id", r.id);
-          loadReservas();
-          loadPartidosDisponibles();
-        }
-      });
-
-      lista.appendChild(item);
-    });
+  if (error) {
+    console.error("Error cargando reservas:", error.message);
+    return;
   }
+
+  console.log("Reservas encontradas:", reservas);
+
+  const { data: misPartidos } = await supabase
+    .from("reservas_usuarios")
+    .select("reserva_id")
+    .eq("usuario_id", currentUser.id);
+
+  const idsOcupados = misPartidos ? misPartidos.map(r => r.reserva_id) : [];
+  console.log("Partidos en los que ya estoy:", idsOcupados);
+
+  const disponibles = reservas.filter(r => {
+    console.log("Analizando reserva:", r.id, "creador:", r.usuario_id, "vs yo:", currentUser.id);
+    return (
+      r.usuario_id !== currentUser.id &&   // 👈 excluir solo los míos
+      !idsOcupados.includes(r.id) &&       // 👈 excluir si ya estoy anotado
+      r.cupo_actual < r.cupo_max           // 👈 solo si hay cupo
+    );
+  });
+
+  console.log("Partidos disponibles filtrados:", disponibles);
+
+  const lista = document.getElementById("partidos-disponibles");
+  lista.innerHTML = "";
+
+  if (disponibles.length === 0) {
+    lista.innerHTML = `<li class="list-group-item">No hay partidos disponibles</li>`;
+    return;
+  }
+
+  disponibles.forEach(r => {
+    const item = document.createElement("li");
+    item.className = "list-group-item d-flex justify-content-between align-items-center";
+    item.innerHTML = `
+      <span>${r.canchas?.nombre || "Cancha desconocida"} - ${r.fecha} ${r.hora_inicio} | Cupo: ${r.cupo_actual}/${r.cupo_max}</span>
+      <button class="btn btn-sm btn-primary">Unirme</button>
+    `;
+
+    item.querySelector("button").addEventListener("click", async () => {
+      const { error } = await supabase
+        .from("reservas_usuarios")
+        .insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
+
+      if (error) {
+        alert("❌ Error al unirse: " + error.message);
+        return;
+      }
+
+      await supabase
+        .from("reservas")
+        .update({ cupo_actual: r.cupo_actual + 1 })
+        .eq("id", r.id);
+
+      alert("✅ Te uniste al partido");
+      loadPartidosDisponibles();
+      loadReservas();
+    });
+
+    lista.appendChild(item);
+  });
+}
 
   // Logout
   document.getElementById("logout").addEventListener("click", async () => {
