--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -122,26 +121,20 @@
     return;
   }
 
-  console.log("Reservas encontradas:", reservas);
-
   const { data: misPartidos } = await supabase
     .from("reservas_usuarios")
     .select("reserva_id")
     .eq("usuario_id", currentUser.id);
 
   const idsOcupados = misPartidos ? misPartidos.map(r => r.reserva_id) : [];
-  console.log("Partidos en los que ya estoy:", idsOcupados);
 
   const disponibles = reservas.filter(r => {
-    console.log("Analizando reserva:", r.id, "creador:", r.usuario_id, "vs yo:", currentUser.id);
     return (
-      r.usuario_id !== currentUser.id &&   // 👈 excluir solo los míos
-      !idsOcupados.includes(r.id) &&       // 👈 excluir si ya estoy anotado
-      r.cupo_actual < r.cupo_max           // 👈 solo si hay cupo
+      r.usuario_id !== currentUser.id &&   // excluir los creados por mí
+      !idsOcupados.includes(r.id) &&       // excluir si ya estoy anotado
+      r.cupo_actual < r.cupo_max           // solo si hay cupo
     );
   });
-
-  console.log("Partidos disponibles filtrados:", disponibles);
 
   const lista = document.getElementById("partidos-disponibles");
   lista.innerHTML = "";
@@ -160,23 +153,32 @@
     `;
 
     item.querySelector("button").addEventListener("click", async () => {
-      const { error } = await supabase
-        .from("reservas_usuarios")
-        .insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
+      try {
+        // Paso 1: Insertar en reservas_usuarios
+        const { error: insertError } = await supabase
+          .from("reservas_usuarios")
+          .insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
 
-      if (error) {
-        alert("❌ Error al unirse: " + error.message);
-        return;
+        if (insertError) {
+          alert("❌ Error al unirse: " + insertError.message);
+          return;
+        }
+
+        // Paso 2: Actualizar cupo_actual con función segura en Supabase
+        const { error: updateError } = await supabase.rpc("incrementar_cupo", { rid: r.id });
+
+        if (updateError) {
+          alert("❌ Error al actualizar cupo: " + updateError.message);
+          return;
+        }
+
+        alert("✅ Te uniste al partido");
+        loadPartidosDisponibles();
+        loadReservas();
+      } catch (err) {
+        console.error("Error inesperado:", err);
+        alert("❌ Error inesperado al unirse");
       }
-
-      await supabase
-        .from("reservas")
-        .update({ cupo_actual: r.cupo_actual + 1 })
-        .eq("id", r.id);
-
-      alert("✅ Te uniste al partido");
-      loadPartidosDisponibles();
-      loadReservas();
     });
 
     lista.appendChild(item);
@@ -193,4 +195,3 @@
   </script>
 </body>
 </html>
-```
