--- a/dashboard.html
+++ b/dashboard.html
@@ -1,35 +1,48 @@
+```html
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard - Cancha360</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    .avatar { width:40px; height:40px; border-radius:50%; object-fit:cover; }
+    .avatar {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
   </style>
 </head>
 <body>
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand fw-bold" href="#">Cancha360</a>
       <div class="d-flex align-items-center">
         <span id="user-name" class="me-3 fw-semibold"></span>
-        <a href="perfil.html"><img id="user-avatar" src="https://placehold.co/40x40" class="avatar" alt="Avatar"></a>
+        <a href="perfil.html">
+          <img id="user-avatar" src="https://placehold.co/40x40" alt="Avatar" class="avatar">
+        </a>
       </div>
     </div>
   </nav>
 
   <div class="container mt-4">
     <h1>Bienvenido a tu Dashboard ⚽</h1>
+
+    <!-- Botones -->
     <div class="mb-4">
       <a href="create-match.html" class="btn btn-success me-2">➕ Crear Partido</a>
       <a href="create-court.html" id="admin-create-court" class="btn btn-primary d-none">🏟️ Crear Cancha</a>
     </div>
 
+    <!-- Tus partidos -->
     <h3>Tus partidos</h3>
     <ul id="reservas-list" class="list-group mb-4"></ul>
 
+    <!-- Partidos disponibles -->
     <h3 class="mt-4">Partidos disponibles</h3>
     <ul id="partidos-disponibles" class="list-group mb-4"></ul>
 
@@ -38,116 +51,143 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
-    const SUPABASE_URL = "https://rcpwypqzahsfsudlkwaf.supabase.co";
-    const SUPABASE_KEY = "TU_ANON_PUBLIC_KEY_AQUI"; // <-- reemplazá con tu anon key completa
-    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+  const SUPABASE_URL = "https://rcpwypqzahsfsudlkwaf.supabase.co";
+  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjcHd5cHF6YWhzZnN1ZGxrd2FmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MTQwODIsImV4cCI6MjA3NDQ5MDA4Mn0.VPkdTAhTK_tZ6Re_lcdx5E3oxSDS2oYG8YDSATXtcl4";
+  const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-    let currentUser = null;
+  let currentUser = null;
 
-    async function checkSession(){
-      const { data: { session } } = await supabase.auth.getSession();
-      if (!session) { window.location.href = "login.html"; return; }
-      currentUser = session.user;
-
-      // cargar nombre/avatar desde tabla usuarios con fallback a metadata
-      const { data: userData } = await supabase.from('usuarios').select('nombre, avatar_url, rol').eq('id', currentUser.id).single().catch(()=>({data:null}));
-      document.getElementById('user-name').textContent = userData?.nombre || currentUser.user_metadata?.full_name || currentUser.email;
-      document.getElementById('user-avatar').src = userData?.avatar_url || currentUser.user_metadata?.avatar_url || 'https://placehold.co/40x40';
-      if (userData?.rol === 'admin') document.getElementById('admin-create-court').classList.remove('d-none');
-
-      await loadReservas();
-      await loadPartidosDisponibles();
+  async function checkSession() {
+    const { data: { session } } = await supabase.auth.getSession();
+    if (!session) {
+      window.location.href = "login.html";
+      return;
     }
 
-    async function loadReservas(){
-      const { data, error } = await supabase
-        .from('reservas_usuarios')
-        .select('reserva_id, reservas(*, canchas(nombre))')
-        .eq('usuario_id', currentUser.id);
+    currentUser = session.user;
 
-      const lista = document.getElementById('reservas-list');
-      lista.innerHTML = '';
-      if (error) { lista.innerHTML = `<li class="list-group-item text-danger">Error: ${error.message}</li>`; return; }
-      if (!data || data.length === 0) { lista.innerHTML = `<li class="list-group-item">No estás anotado en ningún partido</li>`; return; }
+    const { data: userData } = await supabase
+      .from("usuarios")
+      .select("nombre, avatar_url, rol")
+      .eq("id", currentUser.id)
+      .single();
 
-      data.forEach(r => {
-        const partido = r.reservas;
-        const li = document.createElement('li');
-        li.className = 'list-group-item';
-        li.textContent = `${partido.canchas?.nombre || '—'} — ${partido.fecha} ${partido.hora_inicio}-${partido.hora_fin} | ${partido.cupo_actual}/${partido.cupo_max}`;
-        lista.appendChild(li);
-      });
+    document.getElementById("user-name").textContent = userData?.nombre || currentUser.email;
+    document.getElementById("user-avatar").src = userData?.avatar_url || "https://placehold.co/40x40";
+
+    if (userData?.rol === "admin") {
+      document.getElementById("admin-create-court").classList.remove("d-none");
     }
 
-    async function loadPartidosDisponibles(){
-      // traemos todas las reservas (las policies en Supabase determinan qué filas se devuelven)
-      const { data: reservas, error } = await supabase
-        .from('reservas')
-        .select('id, fecha, hora_inicio, hora_fin, cupo_actual, cupo_max, usuario_id, canchas(nombre)');
+    loadReservas();
+    loadPartidosDisponibles();
+  }
 
-      if (error) { console.error('Error cargando reservas:', error.message); return; }
-      console.log('Reservas encontradas:', reservas);
+  // Tus partidos
+  async function loadReservas() {
+    const { data, error } = await supabase
+      .from("reservas_usuarios")
+      .select("reserva_id, reservas(*, canchas(nombre))")
+      .eq("usuario_id", currentUser.id);
 
-      const { data: misPartidos } = await supabase.from('reservas_usuarios').select('reserva_id').eq('usuario_id', currentUser.id);
-      const idsOcupados = misPartidos ? misPartidos.map(x => x.reserva_id) : [];
+    const lista = document.getElementById("reservas-list");
+    lista.innerHTML = "";
 
-      const disponibles = reservas.filter(r => r.usuario_id !== currentUser.id && !idsOcupados.includes(r.id) && r.cupo_actual < r.cupo_max);
-      console.log('Disponibles tras filtro:', disponibles);
-
-      const lista = document.getElementById('partidos-disponibles');
-      lista.innerHTML = '';
-      if (disponibles.length === 0) { lista.innerHTML = `<li class="list-group-item">No hay partidos disponibles</li>`; return; }
-
-      disponibles.forEach(r => {
-        const item = document.createElement('li');
-        item.className = 'list-group-item d-flex justify-content-between align-items-center';
-        item.innerHTML = `<span>${r.canchas?.nombre || '—'} — ${r.fecha} ${r.hora_inicio} | ${r.cupo_actual}/${r.cupo_max}</span><button class="btn btn-sm btn-primary">Unirme</button>`;
-        const btn = item.querySelector('button');
-
-        btn.addEventListener('click', async () => {
-          btn.disabled = true;
-          try {
-            // 1) Insertar en reservas_usuarios
-            const { error: insErr } = await supabase.from('reservas_usuarios').insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
-            if (insErr) {
-              alert('❌ Error al unirse: ' + insErr.message);
-              btn.disabled = false;
-              return;
-            }
-
-            // 2) Llamar RPC que actualiza el cupo en el servidor (creada en SQL Editor)
-            const { data: rpcData, error: rpcErr } = await supabase.rpc('incrementar_cupo', { rid: r.id });
-            if (rpcErr) {
-              // si falla la rpc, avisar y opcionalmente revertir la inserción (dejamos eso para otro paso)
-              alert('❌ Error al actualizar cupo: ' + rpcErr.message);
-              btn.disabled = false;
-              return;
-            }
-
-            // 3) Releer la reserva actualizada para mostrar el nuevo cupo (seguridad)
-            const { data: updated } = await supabase.from('reservas').select('cupo_actual, cupo_max').eq('id', r.id).single();
-            alert('✅ Te uniste al partido — cupo actual: ' + (updated?.cupo_actual ?? rpcData) + '/' + (updated?.cupo_max ?? r.cupo_max));
-
-            // recargar listas
-            await loadReservas();
-            await loadPartidosDisponibles();
-          } catch (e) {
-            console.error('Error al unirse:', e);
-            alert('❌ Error inesperado al unirse.');
-            btn.disabled = false;
-          }
-        });
-
-        lista.appendChild(item);
-      });
+    if (error) {
+      lista.innerHTML = `<li class="list-group-item text-danger">Error: ${error.message}</li>`;
+      return;
     }
 
-    document.getElementById('logout').addEventListener('click', async () => {
-      await supabase.auth.signOut();
-      window.location.href = 'login.html';
+    if (!data || data.length === 0) {
+      lista.innerHTML = `<li class="list-group-item">No estás anotado en ningún partido</li>`;
+      return;
+    }
+
+    data.forEach(r => {
+      const partido = r.reservas;
+      const item = document.createElement("li");
+      item.className = "list-group-item";
+      item.textContent = `${partido.canchas.nombre} - ${partido.fecha} ${partido.hora_inicio}-${partido.hora_fin} | Cupo: ${partido.cupo_actual}/${partido.cupo_max}`;
+      lista.appendChild(item);
     });
+  }
 
-    checkSession();
+  // Partidos disponibles
+  async function loadPartidosDisponibles() {
+    const { data: reservas, error } = await supabase
+      .from("reservas")
+      .select("id, fecha, hora_inicio, hora_fin, cupo_actual, cupo_max, usuario_id, canchas(nombre)");
+
+    if (error) {
+      console.error("Error cargando reservas:", error.message);
+      return;
+    }
+
+    const { data: misPartidos } = await supabase
+      .from("reservas_usuarios")
+      .select("reserva_id")
+      .eq("usuario_id", currentUser.id);
+
+    const idsOcupados = misPartidos ? misPartidos.map(r => r.reserva_id) : [];
+
+    const disponibles = reservas.filter(r =>
+      r.usuario_id !== currentUser.id &&
+      !idsOcupados.includes(r.id) &&
+      r.cupo_actual < r.cupo_max
+    );
+
+    const lista = document.getElementById("partidos-disponibles");
+    lista.innerHTML = "";
+
+    if (disponibles.length === 0) {
+      lista.innerHTML = `<li class="list-group-item">No hay partidos disponibles</li>`;
+      return;
+    }
+
+    disponibles.forEach(r => {
+      const item = document.createElement("li");
+      item.className = "list-group-item d-flex justify-content-between align-items-center";
+      item.innerHTML = `
+        <span>${r.canchas?.nombre || "Cancha desconocida"} - ${r.fecha} ${r.hora_inicio} | Cupo: ${r.cupo_actual}/${r.cupo_max}</span>
+        <button class="btn btn-sm btn-primary">Unirme</button>
+      `;
+
+      item.querySelector("button").addEventListener("click", async () => {
+        // 1. Insertar en reservas_usuarios
+        const { error: insertError } = await supabase
+          .from("reservas_usuarios")
+          .insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
+
+        if (insertError) {
+          alert("❌ Error al unirse: " + insertError.message);
+          return;
+        }
+
+        // 2. Llamar a la función incrementar_cupo en Supabase
+        const { error: funcError } = await supabase.rpc("incrementar_cupo", { id_reserva: r.id });
+
+        if (funcError) {
+          alert("❌ Error al actualizar cupo: " + funcError.message);
+          return;
+        }
+
+        alert("✅ Te uniste al partido");
+        loadPartidosDisponibles();
+        loadReservas();
+      });
+
+      lista.appendChild(item);
+    });
+  }
+
+  // Logout
+  document.getElementById("logout").addEventListener("click", async () => {
+    await supabase.auth.signOut();
+    window.location.href = "login.html";
+  });
+
+  checkSession();
   </script>
 </body>
 </html>
+```
