--- a/dashboard.html
+++ b/dashboard.html
@@ -2,192 +2,154 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard - Cancha360</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <title>Dashboard</title>
+  <script src="https://unpkg.com/@supabase/supabase-js"></script>
   <style>
-    .avatar {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      object-fit: cover;
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    h2 { margin-top: 30px; }
+    .card {
+      border: 1px solid #ccc; border-radius: 8px; padding: 10px;
+      margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
+    .card button { margin-top: 10px; }
   </style>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="#">Cancha360</a>
-      <div class="d-flex align-items-center">
-        <span id="user-name" class="me-3 fw-semibold"></span>
-        <a href="perfil.html">
-          <img id="user-avatar" src="https://placehold.co/40x40" alt="Avatar" class="avatar">
-        </a>
-      </div>
-    </div>
-  </nav>
+  <h1>Dashboard</h1>
+  <p id="usuario"></p>
 
-  <div class="container mt-4">
-    <h1>Bienvenido a tu Dashboard ⚽</h1>
+  <h2>Mis Partidos</h2>
+  <div id="mis-partidos"></div>
 
-    <!-- Botones -->
-    <div class="mb-4">
-      <a href="create-match.html" class="btn btn-success me-2">➕ Crear Partido</a>
-      <a href="create-court.html" id="admin-create-court" class="btn btn-primary d-none">🏟️ Crear Cancha</a>
-    </div>
+  <h2>Partidos Disponibles</h2>
+  <div id="partidos-disponibles"></div>
 
-    <!-- Tus partidos -->
-    <h3>Tus partidos</h3>
-    <ul id="reservas-list" class="list-group mb-4"></ul>
-
-    <!-- Partidos disponibles -->
-    <h3 class="mt-4">Partidos disponibles</h3>
-    <ul id="partidos-disponibles" class="list-group mb-4"></ul>
-
-    <button id="logout" class="btn btn-danger">Cerrar sesión</button>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
-  const SUPABASE_URL = "https://rcpwypqzahsfsudlkwaf.supabase.co";
-  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjcHd5cHF6YWhzZnN1ZGxrd2FmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MTQwODIsImV4cCI6MjA3NDQ5MDA4Mn0.VPkdTAhTK_tZ6Re_lcdx5E3oxSDS2oYG8YDSATXtcl4";
-  const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+    // Configura tu cliente Supabase
+    const SUPABASE_URL = "https://TU-PROJECT.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjcHd5cHF6YWhzZnN1ZGxrd2FmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MTQwODIsImV4cCI6MjA3NDQ5MDA4Mn0.VPkdTAhTK_tZ6Re_lcdx5E3oxSDS2oYG8YDSATXtcl4";
+    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-  let currentUser = null;
+    let currentUser = null;
 
-  async function checkSession() {
-    const { data: { session } } = await supabase.auth.getSession();
-    if (!session) {
-      window.location.href = "login.html";
-      return;
+    // Verificar sesión
+    async function checkUser() {
+      const { data: { user } } = await supabase.auth.getUser();
+      if (!user) {
+        window.location.href = "login.html";
+        return;
+      }
+      currentUser = user;
+      document.getElementById("usuario").textContent = "Usuario actual: " + currentUser.id;
+      console.log("Usuario actual:", currentUser.id);
+
+      loadReservas();
+      loadPartidosDisponibles();
     }
 
-    currentUser = session.user;
+    // Cargar partidos en los que ya estoy
+    async function loadReservas() {
+      const { data: reservas, error } = await supabase
+        .from("reservas")
+        .select("*, reservas_usuarios(usuario_id)")
+        .eq("reservas_usuarios.usuario_id", currentUser.id);
 
-    const { data: userData } = await supabase
-      .from("usuarios")
-      .select("nombre, avatar_url, rol")
-      .eq("id", currentUser.id)
-      .single();
+      if (error) {
+        console.error("Error cargando reservas:", error);
+        return;
+      }
 
-    document.getElementById("user-name").textContent = userData?.nombre || currentUser.email;
-    document.getElementById("user-avatar").src = userData?.avatar_url || "https://placehold.co/40x40";
+      console.log("Mis reservas:", reservas);
 
-    if (userData?.rol === "admin") {
-      document.getElementById("admin-create-court").classList.remove("d-none");
+      const contenedor = document.getElementById("mis-partidos");
+      contenedor.innerHTML = "";
+
+      reservas.forEach(r => {
+        const item = document.createElement("div");
+        item.className = "card";
+        item.innerHTML = `
+          <strong>Partido #${r.id}</strong><br>
+          Fecha: ${r.fecha} - ${r.hora_inicio} a ${r.hora_fin}<br>
+          Cupo: ${r.cupo_actual} / ${r.cupo_max}
+        `;
+        contenedor.appendChild(item);
+      });
     }
 
-    loadReservas();
-    loadPartidosDisponibles();
-  }
+    // Cargar partidos disponibles
+    async function loadPartidosDisponibles() {
+      const { data: reservas, error } = await supabase
+        .from("reservas")
+        .select("*, reservas_usuarios(usuario_id)");
 
-  // Tus partidos
-  async function loadReservas() {
-    const { data, error } = await supabase
-      .from("reservas_usuarios")
-      .select("reserva_id, reservas(*, canchas(nombre))")
-      .eq("usuario_id", currentUser.id);
+      if (error) {
+        console.error("Error cargando partidos:", error);
+        return;
+      }
 
-    const lista = document.getElementById("reservas-list");
-    lista.innerHTML = "";
+      console.log("Reservas encontradas:", reservas);
 
-    if (error) {
-      lista.innerHTML = `<li class="list-group-item text-danger">Error: ${error.message}</li>`;
-      return;
+      // Obtener IDs de partidos en los que ya estoy
+      const misPartidos = reservas
+        .filter(r => r.reservas_usuarios.some(u => u.usuario_id === currentUser.id))
+        .map(r => r.id);
+
+      console.log("Partidos en los que ya estoy:", misPartidos);
+
+      // Filtrar disponibles: no soy creador, no estoy ya inscrito
+      const disponibles = reservas.filter(r =>
+        r.usuario_id !== currentUser.id &&
+        !misPartidos.includes(r.id) &&
+        r.cupo_actual < r.cupo_max
+      );
+
+      console.log("Partidos disponibles filtrados:", disponibles);
+
+      const contenedor = document.getElementById("partidos-disponibles");
+      contenedor.innerHTML = "";
+
+      disponibles.forEach(r => {
+        const item = document.createElement("div");
+        item.className = "card";
+        item.innerHTML = `
+          <strong>Partido #${r.id}</strong><br>
+          Fecha: ${r.fecha} - ${r.hora_inicio} a ${r.hora_fin}<br>
+          Cupo: ${r.cupo_actual} / ${r.cupo_max}<br>
+          <button>Unirme</button>
+        `;
+
+        item.querySelector("button").addEventListener("click", async () => {
+          // Insertar en reservas_usuarios
+          const { error: insertError } = await supabase
+            .from("reservas_usuarios")
+            .insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
+
+          if (insertError) {
+            alert("❌ Error al unirse: " + insertError.message);
+            return;
+          }
+
+          // Incrementar cupo usando función RPC
+          console.log("Llamando RPC incrementar_cupo para reserva", r.id);
+          const { data, error: fnError } = await supabase.rpc("incrementar_cupo", { id_reserva: r.id });
+          console.log("Respuesta RPC:", data, fnError);
+
+          if (fnError) {
+            alert("❌ Error al actualizar cupo: " + fnError.message);
+            return;
+          }
+
+          alert("✅ Te uniste al partido");
+          loadPartidosDisponibles();
+          loadReservas();
+        });
+
+        contenedor.appendChild(item);
+      });
     }
 
-    if (!data || data.length === 0) {
-      lista.innerHTML = `<li class="list-group-item">No estás anotado en ningún partido</li>`;
-      return;
-    }
-
-    data.forEach(r => {
-      const partido = r.reservas;
-      const item = document.createElement("li");
-      item.className = "list-group-item";
-      item.textContent = `${partido.canchas.nombre} - ${partido.fecha} ${partido.hora_inicio}-${partido.hora_fin} | Cupo: ${partido.cupo_actual}/${partido.cupo_max}`;
-      lista.appendChild(item);
-    });
-  }
-
-  // Partidos disponibles
-  async function loadPartidosDisponibles() {
-    const { data: reservas, error } = await supabase
-      .from("reservas")
-      .select("id, fecha, hora_inicio, hora_fin, cupo_actual, cupo_max, usuario_id, canchas(nombre)");
-
-    if (error) {
-      console.error("Error cargando reservas:", error.message);
-      return;
-    }
-
-    const { data: misPartidos } = await supabase
-      .from("reservas_usuarios")
-      .select("reserva_id")
-      .eq("usuario_id", currentUser.id);
-
-    const idsOcupados = misPartidos ? misPartidos.map(r => r.reserva_id) : [];
-
-    const disponibles = reservas.filter(r =>
-      r.usuario_id !== currentUser.id &&
-      !idsOcupados.includes(r.id) &&
-      r.cupo_actual < r.cupo_max
-    );
-
-    const lista = document.getElementById("partidos-disponibles");
-    lista.innerHTML = "";
-
-    if (disponibles.length === 0) {
-      lista.innerHTML = `<li class="list-group-item">No hay partidos disponibles</li>`;
-      return;
-    }
-
-    disponibles.forEach(r => {
-      const item = document.createElement("li");
-      item.className = "list-group-item d-flex justify-content-between align-items-center";
-      item.innerHTML = `
-        <span>${r.canchas?.nombre || "Cancha desconocida"} - ${r.fecha} ${r.hora_inicio} | Cupo: ${r.cupo_actual}/${r.cupo_max}</span>
-        <button class="btn btn-sm btn-primary">Unirme</button>
-      `;
-
-      item.querySelector("button").addEventListener("click", async () => {
-  // 1) Insertar en reservas_usuarios
-  const { error: insertError } = await supabase
-    .from("reservas_usuarios")
-    .insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
-
-  if (insertError) {
-    alert("❌ Error al unirse: " + insertError.message);
-    return;
-  }
-
-  // 2) Llamar a la función para incrementar el cupo
-  const { error: fnError } = await supabase.rpc("incrementar_cupo", { id_reserva: r.id });
-
-  if (fnError) {
-    alert("❌ Error al actualizar cupo: " + fnError.message);
-    return;
-  }
-
-  alert("✅ Te uniste al partido");
-  loadPartidosDisponibles();
-  loadReservas();
-});
-
-
-      lista.appendChild(item);
-    });
-  }
-
-  // Logout
-  document.getElementById("logout").addEventListener("click", async () => {
-    await supabase.auth.signOut();
-    window.location.href = "login.html";
-  });
-
-  checkSession();
+    checkUser();
   </script>
 </body>
 </html>
