--- a/dashboard.html
+++ b/dashboard.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -64,6 +65,7 @@
     }
 
     currentUser = session.user;
+    console.log("✅ Sesión iniciada como:", currentUser.id);
 
     const { data: userData } = await supabase
       .from("usuarios")
@@ -93,6 +95,7 @@
     lista.innerHTML = "";
 
     if (error) {
+      console.error("❌ Error cargando tus reservas:", error.message);
       lista.innerHTML = `<li class="list-group-item text-danger">Error: ${error.message}</li>`;
       return;
     }
@@ -111,77 +114,87 @@
     });
   }
 
- async function loadPartidosDisponibles() {
-  const { data: reservas, error } = await supabase
-    .from("reservas")
-    .select("id, fecha, hora_inicio, hora_fin, cupo_actual, cupo_max, usuario_id, canchas(nombre)");
+  // Partidos disponibles
+  async function loadPartidosDisponibles() {
+    const { data: reservas, error } = await supabase
+      .from("reservas")
+      .select("id, fecha, hora_inicio, hora_fin, cupo_actual, cupo_max, usuario_id, canchas(nombre)");
 
-  if (error) {
-    console.error("Error cargando reservas:", error.message);
-    return;
-  }
+    if (error) {
+      console.error("❌ Error cargando reservas:", error.message);
+      return;
+    }
 
-  const { data: misPartidos } = await supabase
-    .from("reservas_usuarios")
-    .select("reserva_id")
-    .eq("usuario_id", currentUser.id);
+    const { data: misPartidos } = await supabase
+      .from("reservas_usuarios")
+      .select("reserva_id")
+      .eq("usuario_id", currentUser.id);
 
-  const idsOcupados = misPartidos ? misPartidos.map(r => r.reserva_id) : [];
+    const idsOcupados = misPartidos ? misPartidos.map(r => r.reserva_id) : [];
 
-  const disponibles = reservas.filter(r => {
-    return (
-      r.usuario_id !== currentUser.id &&
-      !idsOcupados.includes(r.id) &&
-      r.cupo_actual < r.cupo_max
-    );
-  });
-
-  const lista = document.getElementById("partidos-disponibles");
-  lista.innerHTML = "";
-
-  if (disponibles.length === 0) {
-    lista.innerHTML = `<li class="list-group-item">No hay partidos disponibles</li>`;
-    return;
-  }
-
-  disponibles.forEach(r => {
-    const item = document.createElement("li");
-    item.className = "list-group-item d-flex justify-content-between align-items-center";
-    item.innerHTML = `
-      <span>${r.canchas?.nombre || "Cancha desconocida"} - ${r.fecha} ${r.hora_inicio} | Cupo: ${r.cupo_actual}/${r.cupo_max}</span>
-      <button class="btn btn-sm btn-primary">Unirme</button>
-    `;
-
-    item.querySelector("button").addEventListener("click", async () => {
-      // Paso 1: Insertar usuario en reservas_usuarios
-      const { error: insertError } = await supabase
-        .from("reservas_usuarios")
-        .insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
-
-      if (insertError) {
-        alert("❌ Error al unirse: " + insertError.message);
-        return;
-      }
-
-      // Paso 2: Incrementar el cupo actual con update directo
-      const { error: updateError } = await supabase
-        .from("reservas")
-        .update({ cupo_actual: r.cupo_actual + 1 })
-        .eq("id", r.id);
-
-      if (updateError) {
-        alert("❌ Error al actualizar cupo: " + updateError.message);
-        return;
-      }
-
-      alert("✅ Te uniste al partido");
-      loadPartidosDisponibles();
-      loadReservas();
+    const disponibles = reservas.filter(r => {
+      return (
+        r.usuario_id !== currentUser.id &&
+        !idsOcupados.includes(r.id) &&
+        r.cupo_actual < r.cupo_max
+      );
     });
 
-    lista.appendChild(item);
-  });
-}
+    console.log("📌 Partidos disponibles:", disponibles);
+
+    const lista = document.getElementById("partidos-disponibles");
+    lista.innerHTML = "";
+
+    if (disponibles.length === 0) {
+      lista.innerHTML = `<li class="list-group-item">No hay partidos disponibles</li>`;
+      return;
+    }
+
+    disponibles.forEach(r => {
+      const item = document.createElement("li");
+      item.className = "list-group-item d-flex justify-content-between align-items-center";
+      item.innerHTML = `
+        <span>${r.canchas?.nombre || "Cancha desconocida"} - ${r.fecha} ${r.hora_inicio} | Cupo: ${r.cupo_actual}/${r.cupo_max}</span>
+        <button class="btn btn-sm btn-primary">Unirme</button>
+      `;
+
+      item.querySelector("button").addEventListener("click", async () => {
+        console.log("👉 Intentando unir usuario", currentUser.id, "a la reserva", r.id);
+
+        // Paso 1: Insertar en reservas_usuarios
+        const { error: insertError } = await supabase
+          .from("reservas_usuarios")
+          .insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
+
+        if (insertError) {
+          console.error("❌ Error al insertar en reservas_usuarios:", insertError.message);
+          alert("❌ Error al unirse: " + insertError.message);
+          return;
+        }
+        console.log("✅ Usuario unido en reservas_usuarios");
+
+        // Paso 2: Incrementar cupo
+        const { data: updateData, error: updateError } = await supabase
+          .from("reservas")
+          .update({ cupo_actual: r.cupo_actual + 1 })
+          .eq("id", r.id)
+          .select();
+
+        if (updateError) {
+          console.error("❌ Error al actualizar cupo:", updateError.message);
+          alert("❌ Error al actualizar cupo: " + updateError.message);
+          return;
+        }
+        console.log("✅ Cupo actualizado:", updateData);
+
+        alert("✅ Te uniste al partido");
+        loadPartidosDisponibles();
+        loadReservas();
+      });
+
+      lista.appendChild(item);
+    });
+  }
 
   // Logout
   document.getElementById("logout").addEventListener("click", async () => {
@@ -193,3 +206,4 @@
   </script>
 </body>
 </html>
+```
